--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,10 +21,11 @@
         <div class="container">
     
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <% const currentUser = user; %>
             <% if (locals.posts && posts.length){ posts.forEach(post => { %>
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="images/<%=post.image%>" alt="<%=post.name%> poster" class="img-fluid bd-placeholder-img card-img-top poster">
+                        <img src="images/<%=post.image%>" alt="<%=post.name%> poster" class="img-fluid bd-placeholder-img card-img-top poster" onerror="this.onerror=null;this.src='images/placeholder.png';">
                       <div class="card-body">
                         <div class="text-body-emphasis movie-title">
                             <h3>
@@ -40,11 +41,29 @@
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
                             <a href=<%=`/post/${post.id}`%>>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary me-1">View</button>
                             </a>
-                            <a href=<%=`/delete/${post.id}`%>>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                            </a>
+                            <% if (post.author == user.id){ %>
+                                <button type="button" href="/delete/<%= post.id %>" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
+                                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="exampleModalLabel">Delete Post</h5>
+                                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                          Are you sure you want to delete the post?
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                                          <button type="button" class="btn btn-danger" onclick="location.href='/delete/<%= post.id %>'">Delete</button>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            <% } %>
+                            
                           </div>
                           <small class="text-body-secondary"><%= post.age %></small>
                         </div>
