--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,51 +3,41 @@
 <main class="container">
     <div class="row g-5">
         <div class="col-md-8">
-          <h3 class="pb-4 mb-4 fst-italic border-bottom">
-            Movie Review
-          </h3>
+            <h3 class="pb-4 mb-4 fst-italic border-bottom">
+                Movie Review
+            </h3>
     
-          <article class="blog-post">
-            <h2 class="blog-post-title"><%=post.name%></h2>
-            <div class="rating mb-4">
-                Rating: <%= post.rating %>/10
-            </div>
-            <div class="col-md-6">
-                <img src="images/<%= post.image %>" alt="<%= post.name %> poster" class="img-fluid mb-4">
-            </div>
-            <p class="blog-post-meta"><%= post.creationDate.toString().slice(0,24) %> by <a href="#"><%=author%></a></p>
-            <p><%=post.review%></p>
-          </article>
+            <article class="blog-post">
+                <h2 class="blog-post-title"><%=post.name%></h2>
+                <div class="rating mb-4">
+                    Rating: <%= post.rating %>/10
+                </div>
+                <div class="col-md-6">
+                    <img src="images/<%= post.image %>" alt="<%= post.name %> poster" class="img-fluid mb-4" onerror="this.onerror=null;this.src='images/placeholder.png';">
+                </div>
+                <p class="blog-post-meta"><%= post.creationDate.toString().slice(0,24) %> by <a href="#"><%=author.name%></a></p>
+                <p><%=post.review%></p>
+            </article>
     
-          <nav class="blog-pagination" aria-label="Pagination">
-            <a class="btn btn-outline-primary" href="/edit/<%= post.id %>">Edit</a>
-            <button class="btn btn-outline-danger" href="/delete/<%= post.id %>" tabindex="-1" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
-          </nav>
-          <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Delete Post</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  Are you sure you want to delete the post?
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-danger" onclick="location.href='/delete/<%= post.id %>'">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-    
-        </div>
+            <nav class="blog-pagination" aria-label="Pagination">
+                <% if (post.author == user.id){ %>
+                    <a class="btn btn-outline-primary" href="/edit/<%= post.id %>">Edit</a>
+                    <button class="btn btn-outline-danger" href="/delete/<%= post.id %>" tabindex="-1" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
+                <% } %>
+            </nav>
+            <% if (post.author == user.id){ %>
+                <%- include("partials/deleteModal.ejs") %>
+            <% } %>
+    </div>
     
         <div class="col-md-4">
             <div class="position-sticky" style="top: 2rem;">
               <div class="p-4 mb-3 bg-light rounded">
-                <h4 class="fst-italic">About</h4>
-                <p class="mb-0">Author Bio. Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+                <div class="d-flex align-items-center justify-content-center">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+                </div>
+                <h4 class="fst-italic">About <%= author.name %></h4>
+                <p class="mb-0"><%= author.bio %></p>
               </div>
         
               <div class="p-4">
