Fix bugs. Stop for now. Add authentication and improve security later

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,12 +51,12 @@
                                 <button type="button" class="btn btn-sm btn-outline-secondary me-1">View</button>
                             </a>
                             <% if (post.author == user.id){ %>
-                                <button type="button" href="/delete/<%= post.id %>" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
-                                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <button type="button" href="/delete/<%= post.id %>" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#deleteModal<%= post.id %>">Delete</button>
+                                <div class="modal fade" id="deleteModal<%= post.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
                                       <div class="modal-content">
                                         <div class="modal-header">
-                                          <h5 class="modal-title" id="exampleModalLabel">Delete Post</h5>
+                                          <h5 class="modal-title" id="exampleModalLabel<%= post.id %>">Delete Post</h5>
                                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
